stretched links fixed

--- a/styles.css
+++ b/styles.css
@@ -2,6 +2,11 @@ body {
     font-family: 'PT Serif', serif;
 }
 
+a, a:hover {
+    color: inherit;
+    text-decoration: none;
+}
+
 #top-4-stories {
     border-right: solid 1px gray;
 }
@@ -25,12 +30,6 @@ h4 {
     color: gray;
 }
 
-.article-container {
-    /* border: 1px solid red; */ 
-    /* remove later */
-    padding: 1rem 0;
-}
-
 #top-4-stories-h2-container * {
     width: fit-content;
 }
@@ -51,12 +50,22 @@ h2, p
     padding: 0;
 }
 
-h2, article, .card-body, .col {
-    padding: 0 !important;
+.card-title:hover {
+    text-decoration: underline;
 }
 
-#top-4-stories .card {
-    padding-left: 0;
+.card-body {
+    margin-top: 1rem;
+    padding: 0;
+}
+
+#top-1-story .card-body, #latest-stories-container .card-body {
+    padding: 0;
+    margin: 0;
+}
+
+h2, article, .col {
+    padding: 0 !important;
 }
 
 #breaking-news-content
